--- a/css/style.css
+++ b/css/style.css
@@ -1023,15 +1023,6 @@ form#contact_form {
   width: 97%;
 }
 
-input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
-  padding: 15px;
-  height: 3rem;
-  margin-bottom: 1.875rem;
-}
-
-textarea {
-  height: 9rem;
-}
 
 form label.error {
   display: none !important;
